[package]
authors = ["Lucien Greathouse <me@lpghatguy.com>"]
description = "Run stuff inside Roblox Studio"
edition = "2021"
license = "MIT"
name = "run-in-roblox"
readme = "README.md"
repository = "https://github.com/howmanysmall/run-in-roblox"
version = "0.4.0"

[[bin]]
name = "run-in-roblox"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
bytes = "1"
clap = { version = "4", features = ["derive"] }
colored = "3.0"
env_logger = "0.11"
fs-err = "3.0"
futures = "0.3"                                                                    # upgraded to 0.3 for async/await interoperability
http-body-util = "0.1"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["server", "http1", "tokio"] }
log = "0.4"
rand = "0.9"
rbx_dom_weak = "3"
rbx_xml = "1"
regex = "1"
roblox_install = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
thiserror = "2.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net"] }

[profile.release]
lto = true
strip = true
